src/test/ui/let-else/let-else-deref-coercion.stderr
error[E0308]: mismatched types
  --> $DIR/let-else-deref-coercion.rs:43:13
   |
LL |         let Bar::Present(z) = self else {
   |             ^^^^^^^^^^^^^^^   ---- this expression has type `&mut Foo`
   |             |
   |             expected struct `Foo`, found enum `Bar`
   |
help: you might have meant to use field `0` whose type is `Bar`
   |
LL |         let Bar::Present(z) = self.0 else {
   |                               ~~~~~~

error[E0308]: mismatched types
  --> $DIR/let-else-deref-coercion.rs:82:17
   |
LL |             let Bar(z) = x;
   |                 ^^^^^^   - this expression has type `&mut irrefutable::Foo`
   |                 |
   |                 expected struct `irrefutable::Foo`, found struct `irrefutable::Bar`
   |
help: you might have meant to use field `0` whose type is `irrefutable::Bar`
   |
LL |             let Bar(z) = x.0;
   |                          ~~~

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
